fix(helper): improve code text contrast

--- a/tools/helper/src/client/styles/normalize.scss
+++ b/tools/helper/src/client/styles/normalize.scss
@@ -174,7 +174,6 @@ code {
     border-radius: 4px;
 
     background: var(--vp-c-grey-soft, rgb(142 150 170 / 14%));
-    color: var(--vp-c-text-mute, rgb(60 60 67 / 78%));
 
     font-size: 0.875em;
     overflow-wrap: break-word;
